:pencil2: Fix animated headline on Safari

--- a/assets/animated-headline/css/style.css
+++ b/assets/animated-headline/css/style.css
@@ -43,7 +43,6 @@ Primary style
 }
 
 .cd-intro {
-  /* width: 90%; */
   max-width: 100vw;
   text-align: center;
 }
@@ -86,8 +85,9 @@ Primary style
 .cd-words-wrapper {
   display: inline-block;
   position: relative;
-  min-height: 60px;
+  min-height: 90px;
 }
+
 .cd-words-wrapper b {
   display: inline-block;
   position: absolute;
@@ -110,9 +110,11 @@ xtype
 
 -------------------------------- */
 .cd-headline.type .cd-words-wrapper {
-  vertical-align: top;
-  overflow: hidden;
-}
+    vertical-align: top;
+    overflow: hidden;
+    /* min-height: 76px; */
+    min-width: 90%;
+  }
 .cd-headline.type .cd-words-wrapper::after {
   /* vertical bar */
   content: '';
@@ -134,14 +136,14 @@ xtype
   -moz-animation: cd-pulse 1s infinite;
   animation: cd-pulse 1s infinite;
 }
-.cd-headline.type .cd-words-wrapper.selected {
-  background-color: #aebcb9;
-}
+/* .cd-headline.type .cd-words-wrapper.selected {
+  background-color: lightgray;
+} */
 .cd-headline.type .cd-words-wrapper.selected::after {
   visibility: hidden;
 }
 .cd-headline.type .cd-words-wrapper.selected b {
-  color: #0d0d0d;
+    color: #e59728;
 }
 .cd-headline.type b {
   visibility: hidden;
